2010-06-10  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #5117: typolink: cHash corrupted due to linkVars (together with Pierre Dudoret (Popy))

2010-06-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14677: htmlArea RTE: Toolbar state incorect in the absence of block element

2010-06-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #13062: htmlArea RTE: "non-floating" float value doesn't stick on images
	* Fixed bug #13301: htmlArea RTE: textstyle cannot be applied to full content of block element

2010-06-08  Oliver Hader  <oliver@typo3.org>

	* Fixed unit tests for t3lib_PageRenderer
	* Cleanup: Fixed formatting of t3lib_PageRenderer_testcase

2010-06-06  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #1294: movie param of flash object not processed by prefixResourcePath (Thanks to Jigal van Hemert)

2010-06-06  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14635: Caching framework file backend: Unit test fixes
	* Fixed bug #14632: Caching framework memcached backend: No exception thrown if set() fails and wrong boolean comparison
	* Fixed bug #14631: Caching framework memcached backend: Wrong memcache server detection in unit tests
	* Follow-up to #11386: Caching framework file backend does not return absolute path in getCacheDirectory()
	* Fixed bug #14455: [Performance] Wrong variable in t3lib_cache_memcachedbackend leads to redundant data (Thanks to Dan Osipov)

2010-06-04  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14615: Autosuggest function doesn't work with quotes

2010-06-04  Susanne Moog  <typo3@susannemoog.de>

	* Fixed bug #13818: tcemain versionSwap might break pages_language_overlay relations (thanks to Tolleiv Nietsch)
	
2010-06-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14130: Switching pages with browsebox doesn't work (thanks to Mark Kuiphuis)

2010-06-02  Christian Kuhn  <lolli@schwarzbu.ch>
