@@ -1,3 +1,7 @@
+2010-06-10  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14691: htmlArea RTE: Hitting ENTER in absence of block element may produce non-valid html in non-IE browser
+
 2010-06-09  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #14677: htmlArea RTE: Toolbar state incorect in the absence of block element
