@@ -1,3 +1,7 @@
+2010-06-10  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #14691: htmlArea RTE: Hitting ENTER in absence of block element may produce non-valid html in non-IE browser
+
 2010-06-10  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
 	* Fixed bug #5117: typolink: cHash corrupted due to linkVars (together with Pierre Dudoret (Popy))
